--- a/source/_posts/线性代数.md
+++ b/source/_posts/线性代数.md
@@ -8,6 +8,10 @@ tag:
 - learning
 ---
 
+
+[TOC]
+
+
 ## 1.基
 
 ###   The basis of a vector is a set of linearly independent vectors that span full space 
