--- a/source/_posts/线性代数/线性代数.md
+++ b/source/_posts/线性代数/线性代数.md
@@ -86,3 +86,20 @@ $$
 
 
 ![](https://gdlypc.us.kg/linearalgebra/1.png)
+
+
+
+
+
+## 基本概念
+
+- **方阵**：行数和列数相等的矩阵。
+- **行矩阵**： 只有一行的矩阵
+- **列矩阵**： 只有一列的矩阵
+- **零矩阵**： 所有元素都是零的矩阵
+- **单位矩阵**： 主对角线上的元素为1，其余元素为0的方阵。用En或者In表示。其中n为阶
+- **对角矩阵**：  只有主对角线上的元素可能非零，其他元素都是零的矩阵
+- **上三角矩阵**： 主对角线以下爱的元素全为零的矩阵
+- **下三角矩阵**： 主对角线以上爱的元素全为零的矩阵
+- **阶梯型矩阵**： 矩阵经过行变换后，每一行的第一个非零元素
+- **奇异矩阵**：   行列式为零的矩阵。奇异矩阵没有逆矩阵
