图片粘贴上传测试

--- a/source/_posts/HCIA/计网笔记.md
+++ b/source/_posts/HCIA/计网笔记.md
@@ -1,7 +1,7 @@
 ---
 title: 计网笔记
-date: 2024-12-03
-updated: 2024-12-03
+date: 2024-12-04
+updated: 2024-12-04
 categories: 
 - HCIA
 tag:
@@ -9,22 +9,18 @@ tag:
 ---
 <!-- toc -->
 
-# 1.CRC
+# 物理层
 
-## 1.
+就是要**解决**在各种传输媒体上**传输比特0和1的问题** 进而给数据链路层提供**透明传输比特流的服务**
 
-![crc](https://s2.loli.net/2024/12/03/KRuYzLEp5P7esxf.png)
 
-1. 数据
 
-2. 未知数最高位
+- 机械特性： 指明所有接线器的形状和尺寸，引脚数目和排序，固定和锁定装置
 
-3. 不同次项得到的一组数据
+- 电气特性： 指明在接口电缆的各条线上出现的电压的范围
 
-   数据补零（未知数最高位个）/不同次项得到的一组数据   求得其余数
+- 功能特性： 指明某条线上出现的某一电平的电压表示何种意义
 
-# 2.CDMA
+- 过程特性： 指明对于不同功能的各种可能时间的出现顺序
 
-## 1.
-
-![cdam](https://s2.loli.net/2024/12/03/RDKkFm4A75X3dhe.png)
+  
