--- a/source/_posts/HCIA/计网题目.md
+++ b/source/_posts/HCIA/计网题目.md
@@ -102,3 +102,112 @@ D. 172.168.48.0
 因此，与172.168.16.0/22相邻的子网是：
 
 **C. 172.168.20.0**
+
+### 4.
+
+![image-20241204164559794](https://s2.loli.net/2024/12/04/tAl9wqWmfDe6Kpr.png)
+
+正确的答案是 D. MACR22。
+
+解释如下：
+
+1. 在数据从主机A传输到主机C的过程中，数据包会经过多个网络设备（主机A -> 路由器R1 -> 路由器R2 -> 主机C）。
+2. 每经过一个网络设备，链路层的MAC地址就会发生变化。源MAC地址会变成发送该帧的设备的MAC地址，目的MAC地址会变成下一跳设备的MAC地址。
+3. 数据包的最后一跳是从路由器R2到主机C。
+4. 当路由器R2向主机C发送帧时，它会使用自己连接到主机C所在网络的接口MAC地址作为源MAC地址。
+5. 根据图中的信息，路由器R2连接到主机C所在网络的接口MAC地址是MACR22。
+6. 因此，当主机C在链路层收到这个帧时，帧的源MAC地址将是MACR22。
+
+所以，正确答案是 D. MACR22。
+
+需要注意的是：
+
+- MACA 是主机A的MAC地址，但它只在第一跳（主机A到路由器R1）中作为源MAC地址。
+- MACR11 和 MACS1 在这个传输过程的最后一跳中不会出现为源MAC地址
+
+### 5.
+
+![image-20241204164631400](https://s2.loli.net/2024/12/04/e7K4wFUHxqJy5T9.png)
+
+正确的答案是 A. IP1、IP3。
+
+解释如下：
+
+1. IP数据报在整个传输过程中，源IP地址和目的IP地址保持不变。这是因为IP地址用于标识网络层的端到端通信。
+2. 在这个场景中，主机A（源）向主机C（目的）发送数据报。因此：
+   - 源IP地址始终是主机A的IP地址，即IP1
+   - 目的IP地址始终是主机C的IP地址，即IP3
+3. 当数据报在路由器R1和R2之间传递时，虽然数据报的物理传输路径发生了变化，但IP头部中的源IP和目的IP保持不变。
+4. 需要注意的是，在数据链路层，每一跳的源MAC地址和目的MAC地址会发生变化，但这不影响IP层的地址。
+5. 选项B、C和D都不正确，因为它们或者颠倒了源目地址，或者使用了不相关的IP地址。
+
+所以，正确答案是 A. IP1、IP3。这保持了IP数据报在整个传输过程中源IP和目的IP的一致性。
+
+### 6
+
+![image-20241204164912947](https://s2.loli.net/2024/12/04/7LIt9Tgs45a1XM6.png)
+
+让我们逐步分析这个问题：
+
+1. ARP (Address Resolution Protocol) 请求用于将已知的IP地址解析为相应的MAC地址。
+
+2. 在主机A向主机D发送IP分组的过程中，可能需要进行以下ARP解析：
+
+   a) 主机A需要知道路由器R1左侧接口的MAC地址
+   b) 路由器R1需要知道主机D的MAC地址
+
+3. 最多的情况（2次ARP请求）：
+   - 如果主机A和路由器R1都没有对方的MAC地址缓存，那么会有2次ARP请求。
+
+4. 最少的情况（0次ARP请求）：
+   - 如果主机A已经缓存了路由器R1左侧接口的MAC地址，且路由器R1已经缓存了主机D的MAC地址，那么不需要进行ARP请求。
+
+5. 中间情况（1次ARP请求）：
+   - 如果主机A已经缓存了路由器R1左侧接口的MAC地址，但路由器R1没有缓存主机D的MAC地址，或者相反的情况。
+
+因此，正确答案是 A. 2，0
+
+- 最多有2次ARP请求
+- 最少有0次ARP请求
+
+选项B、C和D都不正确，因为它们或者高估了最少ARP请求次数，或者低估了最多ARP请求次数。
+
+### 7
+
+![image-20241204165110780](https://s2.loli.net/2024/12/04/l6mEgcpjsUAvZN3.png)
+
+让我解释一下为什么会分成3片：
+
+1. 以太网的最大传输单元(MTU)通常是1500字节。
+
+2. IP分片时，每个分片除了需要包含数据外，还需要包含IP头部。标准的IP头部大小是20字节（假设没有可选字段）。
+
+3. 因此，每个分片能够容纳的数据量是：1500 - 20 = 1480字节
+
+4. 现在，我们有3000字节的IP分组需要分片：
+
+   第一片：1480字节数据 + 20字节IP头 = 1500字节
+   第二片：1480字节数据 + 20字节IP头 = 1500字节
+   第三片：40字节数据 + 20字节IP头 = 60字节
+
+   1480 + 1480 + 40 = 3000字节（原始数据量）
+
+5. 因此，3000字节的IP分组会被分成3片。
+
+这就是为什么答案B（3片）是正确的。这种分片方式确保了每个分片都不超过以太网的MTU，同时也保证了原始数据的完整传输。6000为五次
+
+### 8.IP数据报分片
+
+![7443bcebbcfadb9e95c284237ac9ee9f](https://s2.loli.net/2024/12/04/DNRgbjL8meP6YZ4.png)
+
+![image-20241204221646503](https://s2.loli.net/2024/12/04/ZBmxCIrvKUzTJqD.png)
+
+### 9.路由表下一跳转发
+
+![image-20241204222250121](https://s2.loli.net/2024/12/04/SUNBl2kjqCdT7bs.png)
+
+### 10
+
+![image-20241204222902730](https://s2.loli.net/2024/12/04/71x5tKM6kjmQu24.png)
+
+![image-20241204223134151](https://s2.loli.net/2024/12/04/qvIJSw3C8xRmNTH.png)
