三次握手四次挥手

--- a/source/_posts/HCIA/计网笔记.md
+++ b/source/_posts/HCIA/计网笔记.md
@@ -23,4 +23,21 @@ tag:
 
 - 过程特性： 指明对于不同功能的各种可能时间的出现顺序
 
+  ------
   
+  ![1](https://s2.loli.net/2024/12/05/4PDupQrIKMaYW98.png)
+
+# 三次握手
+
+TCP三次握手具体流程：
+
+1. 客户端返送SYN包：**客户端向服务器发送一个SYN包**，其中SYN标记为1，表示客户端请求建立连接，并指定一个随机的序列号**x**。
+2. 服务器发送SYN+ACK包：服务器收到客户端的SYN包后，**服务端向客户端发送一个SYN+ACK包**，其中SYN和ACK标识位均为1，表示服务器接收到了客户端的请求，并同意建立连接。同时服务器也会指定一个随机的序列号**y**，并将确认号设置为**x+1**。
+3. 客户端发送 ACK 包：客户端收到服务器的 SYN+ACK 包后，**向服务器发送一个 ACK 包**，其中 ACK 标识位为 1，表示客户端确认收到了服务器的响应，并将确认号设置为 **y+1**。
+
+# 四次挥手
+
+1. 第一次挥手：客户端向服务器发送一个**FIN（结束）请求**，**表示客户端不再发送数据**。此时**客户端处于FIN_WAIT_1状态。**
+2. 第二次挥手：**服务器收到请求后，回复客户端一个ACK响应确认**，但这个响应可能还携带有未传输完的数据。此时**服务器处于CLOSE_WAIT状态**。注意，**在第三次挥手之前**，**数据还是可以从服务器传送到客户端的**。
+3. 第三次挥手：**服务器完成数据传输后，向客户端发送一个FIN请求**，**表示服务器也没有数据要发送了**。此时**服务器状态变为LAST_ACK状态**。
+4. 第四次挥手：客户端收到服务器的请求后，回复服务器一个ACK响应确认。**此时客户端处于TIME_WAIT状态，需要经过一段时间确保服务器收到自己的应答报文后，才会进入CLOSED状态**。
