--- a/source/_posts/大专生速成指南/大物/大物速成.md
+++ b/source/_posts/大专生速成指南/大物/大物速成.md
@@ -80,3 +80,67 @@ $$
 ![image-20241212172306793](https://s2.loli.net/2024/12/12/zQEejOsioMRuKcm.png)
 
 ![image-20241212172437400](https://s2.loli.net/2024/12/12/dUkfcrGVNFbiqMz.png)
+
+## 证明高斯定理中的常系数
+
+## 磁感线，磁通量，磁场的高斯定理
+
+![image-20241214154713115](https://s2.loli.net/2024/12/14/eAjGosmUMWKkXSZ.png)
+
+## 静电流的环流定律，静电场是保守场
+
+![image-20241214155112642](https://s2.loli.net/2024/12/14/hwvRzcPVHbpaA8t.png)
+
+![image-20241214155151389](https://s2.loli.net/2024/12/14/skFtlxQJV6yu2hi.png)
+
+## 安培环路定理（磁场的环路定理）
+
+![image-20241214155650849](https://s2.loli.net/2024/12/14/nT9D6uEkpC3gv8A.png)
+
+![image-20241214155735220](https://s2.loli.net/2024/12/14/SRJ5CkM1PXDEfhi.png)
+
+![image-20241214155922282](https://s2.loli.net/2024/12/14/zG7jmrfldZWkbeg.png)
+
+# 气体动力学
+
+## 气缸模型，分子力，理想气体
+
+![image-20241214160507397](https://s2.loli.net/2024/12/14/Wdco7gBmQbShuiK.png)
+
+![image-20241214160833021](https://s2.loli.net/2024/12/14/AYeTBfmbiKdDt6H.png)
+
+![image-20241214160923905](https://s2.loli.net/2024/12/14/3xl4ZWj8BX52UGT.png)
+
+![image-20241214161006759](https://s2.loli.net/2024/12/14/EAnuMpjYOsi2FPW.png)
+
+![image-20241214161033922](https://s2.loli.net/2024/12/14/EUaBDqtb2Rx8ICj.png)
+
+## 状态方程，平衡态，准静态
+
+![image-20241214161425228](https://s2.loli.net/2024/12/14/BAvxjp1zgFKSMZQ.png)
+
+![image-20241214161555583](https://s2.loli.net/2024/12/14/t1i2qRx7ETsCfXZ.png)
+
+### 理想气体状态方程
+
+![image-20241214161740771](https://s2.loli.net/2024/12/14/lp3ar46vfR9KBLj.png)
+
+![image-20241214161733091](https://s2.loli.net/2024/12/14/gWOpdfSeuDaPblm.png)
+
+![image-20241214161903206](https://s2.loli.net/2024/12/14/DWdptCg3EF4Hb5w.png)
+
+![image-20241214162116841](https://s2.loli.net/2024/12/14/vmLdjUaGkE93tRp.png)
+
+![image-20241214162227081](https://s2.loli.net/2024/12/14/X976ntSiUBOPfeZ.png)
+
+## 准静态
+
+![image-20241214162333283](https://s2.loli.net/2024/12/14/ft4HrSvlLZc9p6b.png)
+
+![image-20241214162434534](https://s2.loli.net/2024/12/14/Q8BvKyOCSIe4YDs.png)
+
+![image-20241214162530317](https://s2.loli.net/2024/12/14/pH7EinYfXzRsGwy.png)
+
+![image-20241214205642322](https://s2.loli.net/2024/12/14/MedsgqDQ2L7wOv1.png)
+
+![image-20241214205729208](https://s2.loli.net/2024/12/14/luVmXds2z4a1qEO.png)
