--- a/source/_posts/大专生速成指南/大物/大物题目.md
+++ b/source/_posts/大专生速成指南/大物/大物题目.md
@@ -40,3 +40,15 @@ tag:
 ![image-20241212174234013](https://s2.loli.net/2024/12/12/29ABTR7Iups54D1.png)
 
 ![image-20241212174305031](https://s2.loli.net/2024/12/12/WHNcAledRomUSuf.png)
+
+### 2.6 同心球面，实心球体，空心球体
+
+![image-20241214153506299](https://s2.loli.net/2024/12/14/imr57aJCQuHYK3O.png)
+
+![image-20241214153515246](https://s2.loli.net/2024/12/14/Jx8lRfv27CmWI45.png)
+
+![image-20241214153746138](https://s2.loli.net/2024/12/14/sp6NZD5mFwUhbCV.png)
+
+![image-20241214153749030](https://s2.loli.net/2024/12/14/tJOgQWvpi6sHoAN.png)
+
+![image-20241214153802374](https://s2.loli.net/2024/12/14/PCmn56ToDcU9Gq2.png)
