--- a/source/_posts/大专生速成指南/大物/大物速成.md
+++ b/source/_posts/大专生速成指南/大物/大物速成.md
@@ -20,6 +20,7 @@ tag:
 $$
 \vec{F_{12}} = k\frac{q_1q_2}{r^2}\hat{r_{12}}
 \\
+\\
 k = \frac{1}{4\pi\varepsilon_0}
 $$
 
@@ -40,10 +41,23 @@ $$
 $$
 E=\frac{1}{4\pi\varepsilon_0} \frac{Q}{r_2}r_0
 \\
+\\
 电荷元：
 
 dE=\frac{1}{4\pi\varepsilon_0} \frac{dQ}{r_2}r_0
 $$
+
+![image-20241215150937361](https://s2.loli.net/2024/12/15/tOUMA8rhLpZwTxE.png)
+
+![image-20241215152754570](https://s2.loli.net/2024/12/15/XrNSsnoVAtH2IWU.png)
+
+![image-20241215153119517](https://s2.loli.net/2024/12/15/VxLZO7egpboR4zt.png)
+
+![image-20241215153302310](https://s2.loli.net/2024/12/15/K5k4Dm6Z3dgGMUL.png)
+
+![image-20241215153746405](C:\Users\lzy33\AppData\Roaming\Typora\typora-user-images\image-20241215153746405.png)
+
+![image-20241215154121556](https://s2.loli.net/2024/12/15/uVxY3DwXk8jlyPC.png)
 
 ## 运动电荷 电流元
 
@@ -101,6 +115,43 @@ $$
 
 ![image-20241214155922282](https://s2.loli.net/2024/12/14/zG7jmrfldZWkbeg.png)
 
+## 电势
+
+![image-20241215171853712](https://s2.loli.net/2024/12/15/cwHYnTdskgltJeL.png)
+
+![image-20241215172025159](https://s2.loli.net/2024/12/15/FtyazHSwqZ8OXpB.png)
+
+
+
+![image-20241215172203690](https://s2.loli.net/2024/12/15/7uPpnqsIbxCtMw6.png)
+
+## 静电感应，电容器
+
+## 1.
+
+$$
+C=\frac{\varepsilon_0s}{4\pi kd}
+\\
+\\
+孤立导体的电容：
+C=\frac{q}{U}
+\\
+\\
+电容器：
+W=\frac{1}{2}\frac{Q^2}{C}=\frac{1}{2}{C}{U^2}
+\\
+\\
+D={\varepsilon_r}{\varepsilon_0}{E}
+$$
+
+## 2.
+
+处于静电平衡下的到**是**等势体，导体表面附近的电场线与导体表面相互**垂直**，导体体内的电势**等于**导体表面电势
+
+
+
+
+
 # 气体动力学
 
 ## 气缸模型，分子力，理想气体
@@ -144,3 +195,7 @@ $$
 ![image-20241214205642322](https://s2.loli.net/2024/12/14/MedsgqDQ2L7wOv1.png)
 
 ![image-20241214205729208](https://s2.loli.net/2024/12/14/luVmXds2z4a1qEO.png)
+
+![image-20241215144835892](https://s2.loli.net/2024/12/15/YN84FAufTvBzLID.png)
+
+![image-20241215144814435](https://s2.loli.net/2024/12/15/AU5P7I46VKGH2Cd.png)
