--- a/source/_posts/大专生速成指南/大物/大物题目.md
+++ b/source/_posts/大专生速成指南/大物/大物题目.md
@@ -52,3 +52,10 @@ tag:
 ![image-20241214153749030](https://s2.loli.net/2024/12/14/tJOgQWvpi6sHoAN.png)
 
 ![image-20241214153802374](https://s2.loli.net/2024/12/14/PCmn56ToDcU9Gq2.png)
+
+## 2.7
+
+![image-20241215164910540](https://s2.loli.net/2024/12/15/QHvuC4AtLwlMR6q.png)
+
+![image-20241215164941912](https://s2.loli.net/2024/12/15/BKDhsUZRVQkP9Gc.png)
+
