更新大物到气体

--- a/source/_posts/大专生速成指南/大物/大物速成.md
+++ b/source/_posts/大专生速成指南/大物/大物速成.md
@@ -8,8 +8,11 @@ tag:
 - 带砖生的速成
 ---
 
-
 <!-- toc -->
+
+[TOC]
+
+
 
 # 电磁学
 
@@ -82,6 +85,16 @@ $$
 
 ## 载流直导线的磁场
 
+![image-20241216110037314](https://s2.loli.net/2024/12/16/pTCzMuIkXbtNeV4.png)
+
+![image-20241216110052713](https://s2.loli.net/2024/12/16/cswGdhXRDNZJKWp.png)
+
+![image-20241216110657874](https://s2.loli.net/2024/12/16/cULMJPmZY6ip9yV.png)
+
+![Z](https://s2.loli.net/2024/12/16/za1veoRmHJZl87k.png)
+
+
+
 ![image-20241212160440214](https://s2.loli.net/2024/12/12/4QVqWN7O2kFs5ci.png)
 
 ## 电场线，电通量
@@ -113,6 +126,8 @@ $$
 ![image-20241214155151389](https://s2.loli.net/2024/12/14/skFtlxQJV6yu2hi.png)
 
 ## 安培环路定理（磁场的环路定理）
+
+![image-20241216134858547](https://s2.loli.net/2024/12/16/Ahlq3SkiBDg2usn.png)
 
 ![image-20241214155650849](https://s2.loli.net/2024/12/14/nT9D6uEkpC3gv8A.png)
 
@@ -156,9 +171,96 @@ $$
 
 处于静电平衡下的到**是**等势体，导体表面附近的电场线与导体表面相互**垂直**，导体体内的电势**等于**导体表面电势
 
+## 安培定理，洛伦兹力
+
+### 1.安培定理
+
+![image-20241216135205146](https://s2.loli.net/2024/12/16/q5EIyxMmU6cNRhQ.png)
+
+![image-20241216141020783](https://s2.loli.net/2024/12/16/V4PNWEl8kxmroBf.png)
+
+![image-20241216141152902](https://s2.loli.net/2024/12/16/4AXZ7esMGaS1iVH.png)
+
+### 2.洛伦兹力
+
+![image-20241216141749943](https://s2.loli.net/2024/12/16/CGoAVKYUBbpP8iF.png)
+
+![image-20241216141723507](https://s2.loli.net/2024/12/16/gzNMSInHfdoRTVY.png)
+
+## 电磁感应
+
+### 1.电磁感应定律
+
+![image-20241216153355938](https://s2.loli.net/2024/12/16/LAg3QtVdxukoPjT.png)
+
+![image-20241216153825281](https://s2.loli.net/2024/12/16/a9rNvmQfBcyOE42.png)
+
+![image-20241216154245349](https://s2.loli.net/2024/12/16/IsUZ43DAyrCz5pS.png)
+
+![image-20241216154546561](https://s2.loli.net/2024/12/16/jyXmrC2l3znNDep.png)![image-20241216154835706](https://s2.loli.net/2024/12/16/YjzHrf9Q3T2hwc1.png)
 
 
 
+### 2.感应电动势
+
+![image-20241216155209637](https://s2.loli.net/2024/12/16/sUoMgmBbVxT9QOz.png)
+
+![image-20241216155732346](https://s2.loli.net/2024/12/16/XuK1bc68OC2RZMI.png)
+
+![image-20241216155811939](https://s2.loli.net/2024/12/16/dMt7hmNKSzPLruW.png)
+
+### 法拉第电磁感应定律
+
+$$
+电源电动势：\varepsilon =\int\vec{E_k}*d\vec{l}
+$$
+
+$$
+感应电动势：\psi_m=\int_{s}\vec{B}*d\vec{S}
+$$
+
+$$
+法拉第电磁感应定律:\varepsilon = -\frac{d\psi_m}{dt}
+$$
+
+$$
+自感电动势：\psi=LI
+$$
+
+$$
+\varepsilon_L=-L\frac{dI}{dt}
+$$
+
+
+
+
+$$
+自感磁能：W=\frac{1}{2}LI^2
+$$
+
+$$
+磁场的能量密度：W_m=\frac{1}{2}BH
+$$
+
+
+
+### 麦克斯韦方程组
+
+**经典两个假设**：
+
+1.时变磁场产生涡旋电场
+
+2.时变电场产生磁场
+
+**三个实验**：
+
+库仑定律，比-萨定律，电磁感应定律
+
+![image-20241216163247203](https://s2.loli.net/2024/12/16/iKMIcx8tH9AmFuw.png)
+
+![image-20241216163308331](https://s2.loli.net/2024/12/16/gJGsT56FSbfPmvD.png)
+
+![eca158020541e2cb1f5cd04eea28b621](https://s2.loli.net/2024/12/16/ej8AIaUTQk4r1lW.jpg)
 
 # 气体动力学
 
@@ -207,3 +309,8 @@ $$
 ![image-20241215144835892](https://s2.loli.net/2024/12/15/YN84FAufTvBzLID.png)
 
 ![image-20241215144814435](https://s2.loli.net/2024/12/15/AU5P7I46VKGH2Cd.png)
+
+## 速率分布，自由度，平（转）动能
+
+
+
