--- a/source/_posts/大专生速成指南/大物/大物题目.md
+++ b/source/_posts/大专生速成指南/大物/大物题目.md
@@ -9,6 +9,10 @@ tag:
 ---
 <!-- toc -->
 
+[TOC]
+
+
+
 # 电磁学
 
 ## 1.
@@ -53,9 +57,30 @@ tag:
 
 ![image-20241214153802374](https://s2.loli.net/2024/12/14/PCmn56ToDcU9Gq2.png)
 
-## 2.7
+### 2.7
 
 ![image-20241215164910540](https://s2.loli.net/2024/12/15/QHvuC4AtLwlMR6q.png)
 
 ![image-20241215164941912](https://s2.loli.net/2024/12/15/BKDhsUZRVQkP9Gc.png)
 
+## 电磁感应
+
+### 感生电动势
+
+![image-20241216210430627](https://s2.loli.net/2024/12/16/LgOQ7xcNMhzkfdG.png)
+
+![image-20241216210947413](https://s2.loli.net/2024/12/16/Xk5gfoIGpFTiPEK.png)
+
+![image-20241216210950744](https://s2.loli.net/2024/12/16/9kXYLi1U3vsA4ag.png)
+
+![image-20241216211102832](https://s2.loli.net/2024/12/16/8mF7ebTLpS2x1nw.png)
+
+### 动生电动势
+
+![image-20241216211444575](https://s2.loli.net/2024/12/16/dthiXPlxSF4fkDH.png)
+
+![image-20241216212208565](https://s2.loli.net/2024/12/16/R9iCQczHp18FxoL.png)
+
+![image-20241216212430591](https://s2.loli.net/2024/12/16/1alpStNwgWJ6BIK.png)
+
+![image-20241216212919005](https://s2.loli.net/2024/12/16/6PdoSaQCEuiLsqk.png)
