--- a/source/_posts/大专生速成指南/大物/大物速成.md
+++ b/source/_posts/大专生速成指南/大物/大物速成.md
@@ -312,5 +312,34 @@ $$
 
 ## 速率分布，自由度，平（转）动能
 
+## 理想气体
 
+![image-20241217112903225](https://s2.loli.net/2024/12/17/4HE7Iyf6nN9PKjV.png)
 
+## 温度和压强
+
+![image-20241217113438021](https://s2.loli.net/2024/12/17/YhQNDFIP5JSluZA.png)
+
+![image-20241217113632413](https://s2.loli.net/2024/12/17/JLmfw8ZBFpHICjV.png)
+
+## 内能和能量均分定理
+
+![123](https://s2.loli.net/2024/12/17/AlH2URdy53rxCOk.png)
+
+![](https://s2.loli.net/2024/12/17/m9pyIVjHWAD7TNC.png)
+
+![image-20241217140129001](https://s2.loli.net/2024/12/17/EldTYykJLum1FQA.png)
+
+![image-20241217140330944](https://s2.loli.net/2024/12/17/m7FBhIO3wDSCLpc.png)
+
+## 速率分布律
+
+![image-20241217140738738](https://s2.loli.net/2024/12/17/JraLQylhKsp2Rvi.png)
+
+![image-20241217141226862](https://s2.loli.net/2024/12/17/gWoNHVFjlrAuyiw.png)
+
+![image-20241217141448829](https://s2.loli.net/2024/12/17/NI2nhbVYSuGA8lo.png)
+
+## 碰撞频率和自由程
+
+![image-20241217141701657](https://s2.loli.net/2024/12/17/ObIEwhqNdXD7pMA.png)
