提交热力学

--- a/source/_posts/大专生速成指南/大物/大物速成.md
+++ b/source/_posts/大专生速成指南/大物/大物速成.md
@@ -343,3 +343,49 @@ $$
 ## 碰撞频率和自由程
 
 ![image-20241217141701657](https://s2.loli.net/2024/12/17/ObIEwhqNdXD7pMA.png)
+
+# 热力学定律
+
+
+
+## 热力学第一定律
+
+![image-20241217203037055](https://s2.loli.net/2024/12/17/G75OT8ZdDLB24EA.png)
+
+![](https://s2.loli.net/2024/12/17/Wru8etSNaFLZbBy.png)
+
+![](https://s2.loli.net/2024/12/17/o5NwYZ7gxL6Bhcz.png)
+
+![image-20241217203540060](https://s2.loli.net/2024/12/17/xhwt6SLjfBVvPXb.png)
+
+![image-20241217203655286](https://s2.loli.net/2024/12/17/YVQ6PFvc8fo17IT.png)
+
+![image-20241217204154993](https://s2.loli.net/2024/12/17/J6tHMSO51fLFjnK.png)
+
+
+
+## 等值过程
+
+![image-20241217204219872](https://s2.loli.net/2024/12/17/86r9eRclxt7PuTS.png)
+
+![image-20241217204653398](https://s2.loli.net/2024/12/17/pkc752Mm4QoWryd.png)
+
+
+
+
+
+
+
+## 循环过程和热机
+
+![image-20241217205942655](https://s2.loli.net/2024/12/17/5jQhcXzUJeRYSAL.png)
+
+![image-20241217210226207](https://s2.loli.net/2024/12/17/Ed87zmlXGNY5Txu.png)
+
+![image-20241217210343857](https://s2.loli.net/2024/12/17/YM7WXkIS5EazRlv.png)
+
+## 热力学第二定律
+
+![image-20241217210403387](https://s2.loli.net/2024/12/17/MsCgJN91coPUTdH.png)
+
+![image-20241217210633190](https://s2.loli.net/2024/12/17/f8dLguqxzC39UIR.png)
