--- a/source/_posts/大专生速成指南/大物/大物速成.md
+++ b/source/_posts/大专生速成指南/大物/大物速成.md
@@ -63,7 +63,7 @@ $$
 
 ![image-20241215153302310](https://s2.loli.net/2024/12/15/K5k4Dm6Z3dgGMUL.png)
 
-![image-20241215153746405](C:\Users\lzy33\AppData\Roaming\Typora\typora-user-images\image-20241215153746405.png)
+![94277677863cd0b47058e6513849a6a4](https://s2.loli.net/2024/12/18/hOpg84ex6Zynfbt.png)
 
 ![image-20241215154121556](https://s2.loli.net/2024/12/15/uVxY3DwXk8jlyPC.png)
 
@@ -385,6 +385,10 @@ $$
 ![image-20241217210343857](https://s2.loli.net/2024/12/17/YM7WXkIS5EazRlv.png)
 
 ## 热力学第二定律
+
+从统计意义来解释：不可逆过程实质上是一个**出现几率小的宏观状态向出现几率大的宏观状态进行的**
+
+一切实际过程都向着**熵增加**的方向进行
 
 ![image-20241217210403387](https://s2.loli.net/2024/12/17/MsCgJN91coPUTdH.png)
 
