增加题目中电磁的概述

--- a/source/_posts/大专生速成指南/大物/大物题目.md
+++ b/source/_posts/大专生速成指南/大物/大物题目.md
@@ -9,11 +9,19 @@ tag:
 ---
 <!-- toc -->
 
-[TOC]
+
+
+[toc]
+
+
 
 
 
 # 电磁学
+
+## 电的概述
+
+![image-20241219150734367](https://s2.loli.net/2024/12/19/IMW8ioCq5ptmP7h.png)
 
 ## 1.
 
@@ -62,6 +70,10 @@ tag:
 ![image-20241215164910540](https://s2.loli.net/2024/12/15/QHvuC4AtLwlMR6q.png)
 
 ![image-20241215164941912](https://s2.loli.net/2024/12/15/BKDhsUZRVQkP9Gc.png)
+
+## 磁的概述
+
+![image-20241219150740347](https://s2.loli.net/2024/12/19/ltOMSCpoIXc4kP1.png)
 
 ## 电磁感应
 
