--- a/source/_posts/大专生速成指南/线性代数/行列式.md
+++ b/source/_posts/大专生速成指南/线性代数/行列式.md
@@ -8,8 +8,11 @@ tag:
 - 带砖生的速成
 ---
 
-
 <!-- toc -->
+
+[toc]
+
+
 
 ## 1.行列式
 
@@ -65,4 +68,8 @@ $$
 
 
 
+
+## 行列式的性质
+
+![image-20250102114109373](https://s2.loli.net/2025/01/02/83ZyBgji4HDemXI.png)
 
