提交线代速成

--- a/source/_posts/大专生速成指南/线性代数/线代速成.md
+++ b/source/_posts/大专生速成指南/线性代数/线代速成.md
@@ -54,6 +54,8 @@ tag:
 
 ![image-20250102140554631](https://s2.loli.net/2025/01/02/952d3UmRHnzPuyx.png)
 
+![image-20250104205746400](https://s2.loli.net/2025/01/04/yzmq43vpFCXMIEd.png)
+
 
 
 ## 秩
@@ -76,9 +78,25 @@ tag:
 
 ![image-20250102211011293](https://s2.loli.net/2025/01/02/w27k5HZKtqmCsPN.png)
 
+## 齐次线性方程组
+
 ![image-20250102211058859](https://s2.loli.net/2025/01/02/GzFTJvpuZ8UAe67.png)
 
+![image-20250104215910154](https://s2.loli.net/2025/01/04/z8sYre9X2apPiDv.png)
+
+## 非齐次线性方程组
+
+![image-20250104215918039](https://s2.loli.net/2025/01/04/aQfOnVFKrwzkCvu.png)
+
 ![image-20250102211105199](https://s2.loli.net/2025/01/02/iBXayA6OVWsp3SR.png)
+
+## 矩阵的行列式计算
+
+![image-20250104204348778](https://s2.loli.net/2025/01/04/wV53nIZucbkYiFW.png)
+
+
+
+
 
 # 向量
 
@@ -87,3 +105,65 @@ tag:
 ![image-20250102211859441](https://s2.loli.net/2025/01/02/D2ZybEerkHXGfO4.png)
 
 ![image-20250102212311237](https://s2.loli.net/2025/01/02/sJczMYl9IKNEGo5.png)
+
+![image-20250104190931160](https://s2.loli.net/2025/01/04/DuOtTxpMQUqvJfw.png)
+
+![image-20250104191422878](https://s2.loli.net/2025/01/04/GVkvuUXEBLgTx1y.png)
+
+![image-20250104191505112](https://s2.loli.net/2025/01/04/xSvHPgDrcRQl4zn.png)
+
+![image-20250104191835207](https://s2.loli.net/2025/01/04/gXOjLzcm12uQyeM.png)
+
+![image-20250104192429342](https://s2.loli.net/2025/01/04/3JlLIUA5OQynNza.png)
+
+## 向量空间
+
+![image-20250104201423694](https://s2.loli.net/2025/01/04/WFjdQqHT3aRNVog.png)
+
+# 特征值
+
+![image-20250105164353733](https://s2.loli.net/2025/01/05/7vWrFRTLN2pz5jH.png)
+
+![image-20250104221243570](https://s2.loli.net/2025/01/04/ORoLIDVKl3b5UMx.png)
+
+![image-20250104222623827](https://s2.loli.net/2025/01/04/QJB1mdhD2GF3pCT.png)
+
+## 相似对角化
+
+![image-20250105164435815](https://s2.loli.net/2025/01/05/MdNyR8z5QLb7oWe.png)
+
+![image-20250104223639465](https://s2.loli.net/2025/01/04/wdEq82DyFrTIoP9.png)
+
+## 相似对角化
+
+![image-20250105205105283](https://s2.loli.net/2025/01/05/69vI3xB8LhgtjlP.png)
+
+![image-20250104223810071](https://s2.loli.net/2025/01/04/oheaDYtwJFLCzvq.png)
+
+![image-20250105165024157](https://s2.loli.net/2025/01/05/eHTSLAvY2a13ONu.png)
+
+![image-20250105165603453](https://s2.loli.net/2025/01/05/q9d54IrAu7eiWUn.png)
+
+## 正交相似对角化
+
+![image-20250105205255846](https://s2.loli.net/2025/01/05/COi9pDZ7S1PMBn6.png)
+
+## 特征值的性质
+
+![image-20250105210103337](https://s2.loli.net/2025/01/05/YSrFP2RJVMhpDZq.png)
+
+# 二次型
+
+![image-20250105165754139](https://s2.loli.net/2025/01/05/lzbAy9drhZeGf7v.png)
+
+![image-20250105170241737](https://s2.loli.net/2025/01/05/wV5n8TI1sbEWCog.png)
+
+![image-20250105170359922](https://s2.loli.net/2025/01/05/4adnxZ6pv7jEyUg.png)
+
+![image-20250105171400882](https://s2.loli.net/2025/01/05/SpDQ3enuUbTXC41.png)
+
+![image-20250105171726986](https://s2.loli.net/2025/01/05/2XUw4oIvOWJKNi6.png)
+
+![image-20250105171812084](https://s2.loli.net/2025/01/05/R9LwprXJCaUBvu2.png)
+
+![image-20250105172011504](https://s2.loli.net/2025/01/05/eiZKR4XtFykDzLa.png)
