更改toc未显示

--- a/source/_posts/大专生速成指南/线性代数/线代题目.md
+++ b/source/_posts/大专生速成指南/线性代数/线代题目.md
@@ -8,8 +8,20 @@ tag:
 - 带砖生的速成
 ---
 
-<!--toc-->
+<!-- toc -->
 [toc]
+# 线性方程组
+
+## 齐次方程组
+
+![image-20250107142240624](https://s2.loli.net/2025/01/07/XBazdLyeUWOkEMb.png)
+
+## 非齐次方程组
+
+
+
+
+
 # 二项式
 
 ## 二次型矩阵
