--- a/source/_posts/大专生速成指南/线性代数/线代速成.md
+++ b/source/_posts/大专生速成指南/线性代数/线代速成.md
@@ -10,13 +10,17 @@ tag:
 
 <!-- toc -->
 
+[toc]
+
+
+
 # 行列式
 
 ![image-20250102114647987](https://s2.loli.net/2025/01/02/83ZyBgji4HDemXI.png)
 
 
 
-[toc]
+
 
 
 
@@ -31,6 +35,10 @@ tag:
 ![](https://s2.loli.net/2025/01/02/cLiQZAVdpxWJlzP.png)
 
 ![image-20250102121014162](https://s2.loli.net/2025/01/02/4UJEYhvMPxnCZHl.png)
+
+## 反对称矩阵
+
+![image-20250107160611749](https://s2.loli.net/2025/01/07/vSLir6CpE39gHoI.png)
 
 ## 矩阵的逆
 
@@ -73,6 +81,10 @@ tag:
 ## 分块矩阵
 
 ![image-20250102144040289](https://s2.loli.net/2025/01/02/fTSzX57yaMeKdHm.png)
+
+## 矩阵的行列式计算
+
+![image-20250107155801456](C:\Users\lzy33\AppData\Roaming\Typora\typora-user-images\image-20250107155801456.png)
 
 # 线性方程组
 
