--- a/source/_posts/大专生速成指南/线性代数/线代题目.md
+++ b/source/_posts/大专生速成指南/线性代数/线代题目.md
@@ -18,7 +18,11 @@ tag:
 
 ## 非齐次方程组
 
+![image-20250107154716868](https://s2.loli.net/2025/01/07/LaMxD9q81Z5F7Ef.png)
 
+## 带参数方程组
+
+![image-20250107155345631](https://s2.loli.net/2025/01/07/fy8KlbSBdC7qzuJ.png)
 
 
 
@@ -45,3 +49,10 @@ tag:
 ## 正定二次型
 
 ![image-20250106165937488](https://s2.loli.net/2025/01/06/tW65vhXjCq38ksr.png)
+
+# 题目
+
+## 1.
+
+若矩阵A的秩为r，则**至少**有一个r阶子式不等于0。
+
