--- a/source/_posts/大专生速成指南/线性代数/线代速成.md
+++ b/source/_posts/大专生速成指南/线性代数/线代速成.md
@@ -84,7 +84,7 @@ tag:
 
 ## 矩阵的行列式计算
 
-![image-20250107155801456](C:\Users\lzy33\AppData\Roaming\Typora\typora-user-images\image-20250107155801456.png)
+![image-20250107155801456](https://s2.loli.net/2025/01/08/AowCDLuHaJQ76Xv.png)
 
 # 线性方程组
 
