--- a/source/_posts/测试/测试.md
+++ b/source/_posts/测试/测试.md
@@ -158,3 +158,6 @@ bug的定义每个公司都不一致，一般分为四个等级：
 1. 崩溃：阻碍开发或测试工作的问题；造成系统崩溃，死机，死循环，导致数据库数据丢失，与数据库连接错误，主要功能丧失，基本模块缺失等问题。如：代码错误，死循环，数据库发生死锁，重要的一级菜单功能不能使用等（该问题在测试中较少出现，一旦竖线立即中止当前版本测试）
 2. 严重：系统主要功能部分丧失，数据库保存调用错误，用户数据丢失，一级功能菜单不能使用但是不影响其他功能的测试，功能设计与需求严重不符，
 
+# 测试案例练习
+
+![image-20250324145028031](C:\Users\stllc\AppData\Roaming\Typora\typora-user-images\image-20250324145028031.png)
