--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -1,7 +1,7 @@
 ---
 title: 操作系统速成
 date: 2025-3-21
-updated: 2025-3-21
+updated: 2025-3-24
 categories: 
 - 操作系统
 tag:
@@ -12,3 +12,32 @@ tag:
 <!-- toc -->
 
 [TOC]
+
+## 操作系统的特征
+
+**最基本的特征**，互为存在条件：并发，共享
+
+- **并行**：指两个或多个事件可以在**同一时刻**发生，**多核CPU可以实现并行**，一个CPU同一时刻只有一个程序在运行
+
+- **并发**：两个或多个事件可以在**同一时间间隔**发生，用户看起来是每个程序都在运行，实际上是**每个程序都交替执行**
+
+  < img >
+
+## 进程管理
+
+< img >
+
+**进程控制块（PCB）**：用于描述和控制进程运行的通用数据结构，记录进程当前状态和控制进程运行的全部信息，**是进程存在的唯一标识**
+
+**进程（Process）与线程（Thread）：**
+
+- **线程**：操作系统进行**"运行调度的最小单位"**
+
+- **进程**：系统进行**"资源分配和调度的基本单位"**
+
+**区别与联系：**
+
+1. 一个进程可以有一个或多个线程
+2. 线程包含在进程中，是进程中实际运行工作的单位
+3. 进程的线程共享进程资源
+4. 一个进程可以并发多个线程，每个线程执行不同的任务
