第二周第三天更新

--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -41,3 +41,27 @@ tag:
 2. 线程包含在进程中，是进程中实际运行工作的单位
 3. 进程的线程共享进程资源
 4. 一个进程可以并发多个线程，每个线程执行不同的任务
+
+**五状态模型**
+
+- **就绪状态：**其他资源（进程控制块，内存，栈空间，堆空间）都准备好，纸擦和CPU状态
+
+- **执行状态：**进程获得CPU，其程序正在执行
+
+- **阻塞状态：**进程因某种原因放弃CPU的状态，阻塞进程以队列的形式放置
+
+- **创建状态：**创建进程时拥有PCB但其它资源尚未准备就绪
+
+- **终止状态：**进程结束由系统清理或者归还PCB的状态
+
+**进程同步的方法（重要）**
+
+img
+
+1.使用fork系统调用创建进程：使用fork系统调用无参数，fork会返回两次，分别返回子进程id和0，返回子进程id的是父进程，返回0的是子进程。
+
+img
+
+- fork系统调用的是用于创建进程的；
+- fork创建的进程初始化状态与父进程一样；
+- 系统会为fork的进程分配新的资源
