--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -15,7 +15,7 @@ tag:
 
 ## 操作系统的特征
 
-**最基本的特征**，互为存在条件：并发，共享
+### **最基本的特征**，互为存在条件：并发，共享
 
 - **并行**：指两个或多个事件可以在**同一时刻**发生，**多核CPU可以实现并行**，一个CPU同一时刻只有一个程序在运行
 
@@ -29,7 +29,7 @@ tag:
 
 **进程控制块（PCB）**：用于描述和控制进程运行的通用数据结构，记录进程当前状态和控制进程运行的全部信息，**是进程存在的唯一标识**
 
-**进程（Process）与线程（Thread）：**
+### **进程（Process）与线程（Thread）：**
 
 - **线程**：操作系统进行**"运行调度的最小单位"**
 
@@ -42,7 +42,7 @@ tag:
 3. 进程的线程共享进程资源
 4. 一个进程可以并发多个线程，每个线程执行不同的任务
 
-**五状态模型**
+### **五状态模型**
 
 - **就绪状态：**其他资源（进程控制块，内存，栈空间，堆空间）都准备好，纸擦和CPU状态
 
@@ -54,14 +54,80 @@ tag:
 
 - **终止状态：**进程结束由系统清理或者归还PCB的状态
 
-**进程同步的方法（重要）**
+### **进程同步的方法（重要）**
 
 img
 
-1.使用fork系统调用创建进程：使用fork系统调用无参数，fork会返回两次，分别返回子进程id和0，返回子进程id的是父进程，返回0的是子进程。
+1.**使用fork系统调用创建进程：**使用fork系统调用无参数，fork会返回两次，分别返回子进程id和0，返回子进程id的是父进程，返回0的是子进程。
 
 img
 
 - fork系统调用的是用于创建进程的；
 - fork创建的进程初始化状态与父进程一样；
 - 系统会为fork的进程分配新的资源
+
+2.**共享内存：**在某种程度上，多进程是共同使用物理内存的，但是由于操作系统的进程管理，进程内的内存空间是独立的，因此进程默认是不能访问进程空间意外的内存空间的。
+
+- 共享存储**允许不相关的进程**访问同一片物理内存；
+- 共享内存是两个进程之间**共享和传递数据最快的方式**；
+- 共享内存**未提供同步机制**，需要借助其他机制管理访问；
+
+img
+
+3.**Unix域套接字**
+
+域套接字是一种高级的进程间通信的方法，可以用于同一机器进程间通信。
+
+**套接字（socket）**：为网络通信中使用的术语
+
+Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfinx，uWSGI等。
+
+服务端和客户端分别使用Unix域套接字的过程：
+
+img
+
+### **线程同步的方法（重要）**
+
+**线程同步的方法：**
+
+1. **互斥锁：**互斥锁是最简单的线程同步的方法，也称为互斥量，处于两态之一的变量：**解锁和加锁**，两个状态可以**保证资源访问的串行**。原子性：指一系列操作**不可被中断**的特性，要么全部执行完成，要么全部没有执行。
+
+​		img
+
+   2.**自旋锁**：自旋锁是一种多线程同步的变量，使用自旋锁的线程会反复检查锁变量是否可用，自旋锁不会让出CPU，是一种**忙等待状态**，**即死循环等待锁被释放，自旋锁的效率远高于互斥锁**。特点：**避免了进程或者线程上下文切换的开销**，但是**不适合在单核CPU使用**
+
+​	3.**读写锁：**是一种特殊的自旋锁，允许多个读操作同时访问资源以提高读性能，但是对写操作是互斥的，即**`对多读少写的操作效率提升`**很显著
+
+​	4**.条件变量**：是一种相对比较复杂的线程同步方法，条件变量允许线程睡眠，直到满足某种条件，**当满足条件时候，可以给先线程信号通知唤醒**
+
+### 线程同步方法对比（重要）
+
+img
+
+img
+
+|              |                                                              |
+| :----------: | ------------------------------------------------------------ |
+|   同步方法   | 描述                                                         |
+|  **互斥锁**  | **最简单**的一种线程同步方法，会**阻塞线程**                 |
+|  **自旋锁**  | **避免切换**的一种线程同步方法，属于**”忙等待“**             |
+|  **读写锁**  | 为**”读多写少“**的资源设计的线程同步方法，可以**显著提高性能** |
+| **条件变量** | 相对复杂的一种该线程同步方法，有更灵活的使用场景             |
+
+### 进程的标记
+
+|          |                                                             |
+| :------: | :---------------------------------------------------------: |
+| 状态符号 |                          状态说明                           |
+|    R     |             （TASK_RUNNING）,进程正处于运行状态             |
+|    S     |          （TASK_INTERRUPTIBLE）,进程正处于睡眠状态          |
+|    D     |     （TASK_UNINTERRUPTIBLE）,进程正处于IO等待的睡眠状态     |
+|    T     |             （TASK_STOPPED）,进程正处于暂停状态             |
+|    Z     | （TASK_DEAD or EXIT_ZOMBIE）,进程正处于退出状态，或僵尸进程 |
+
+## 作业管理
+
+### 死锁：
+
+- 两个或两个以上的进程在执行过程中，由于竞争资源或者由于彼此通信二造成的一种阻塞的现象，若无外力作用，它们都将无法推进下去，
+
