--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -21,11 +21,11 @@ tag:
 
 - **并发**：两个或多个事件可以在**同一时间间隔**发生，用户看起来是每个程序都在运行，实际上是**每个程序都交替执行**
 
-  ![41236d864529da72be5878d07bdd3200_720](https://s2.loli.net/2025/03/24/gu8VkZslYwEanp2.png)
+  ![image-20210830104953215](https://i-blog.csdnimg.cn/blog_migrate/feaf848afdd6d8dcc6d93ae8d4eb0773.png)
 
 ## 进程管理
 
-![da1c9ac0e9b7142414cb80952c08ec3d_720](https://s2.loli.net/2025/03/24/FlBgqRtcH8WdOk5.png)
+
 
 **进程控制块（PCB）**：用于描述和控制进程运行的通用数据结构，记录进程当前状态和控制进程运行的全部信息，**是进程存在的唯一标识**
 
@@ -54,13 +54,13 @@ tag:
 
 - **终止状态：**进程结束由系统清理或者归还PCB的状态
 
+  ![image-20210830134139425](https://s2.loli.net/2025/03/27/vAwKJLImseuFQZ3.png)
+
 ### **进程同步的方法（重要）**
 
-img
+![image-20210826215825209](https://s2.loli.net/2025/03/27/7Tqefo5haAFsrDm.png)
 
 1.**使用fork系统调用创建进程：**使用fork系统调用无参数，fork会返回两次，分别返回子进程id和0，返回子进程id的是父进程，返回0的是子进程。
-
-img
 
 - fork系统调用的是用于创建进程的；
 - fork创建的进程初始化状态与父进程一样；
@@ -72,7 +72,7 @@ img
 - 共享内存是两个进程之间**共享和传递数据最快的方式**；
 - 共享内存**未提供同步机制**，需要借助其他机制管理访问；
 
-img
+![image-20210826223244411](https://s2.loli.net/2025/03/27/QeS4gqTP9MURsuJ.png)
 
 3.**Unix域套接字**
 
@@ -84,7 +84,7 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 
 服务端和客户端分别使用Unix域套接字的过程：
 
-img
+![image-20210826223709480](https://s2.loli.net/2025/03/27/yuVb6H9NJ3SY51R.png)
 
 ### **线程同步的方法（重要）**
 
@@ -92,7 +92,7 @@ img
 
 1. **互斥锁：**互斥锁是最简单的线程同步的方法，也称为互斥量，处于两态之一的变量：**解锁和加锁**，两个状态可以**保证资源访问的串行**。原子性：指一系列操作**不可被中断**的特性，要么全部执行完成，要么全部没有执行。
 
-​		img
+![image-20210826220013572](https://s2.loli.net/2025/03/27/zEbUDMGqTQeL4av.png)
 
    2.**自旋锁**：自旋锁是一种多线程同步的变量，使用自旋锁的线程会反复检查锁变量是否可用，自旋锁不会让出CPU，是一种**忙等待状态**，**即死循环等待锁被释放，自旋锁的效率远高于互斥锁**。特点：**避免了进程或者线程上下文切换的开销**，但是**不适合在单核CPU使用**
 
@@ -102,9 +102,9 @@ img
 
 ### 线程同步方法对比（重要）
 
-img
+![image-20210826222325975](https://s2.loli.net/2025/03/27/VShR8t4AvgToJpW.png)
 
-img
+![image-20210826222346498](https://s2.loli.net/2025/03/27/7iwsvre5c9SRP6m.png)
 
 |              |                                                              |
 | :----------: | ------------------------------------------------------------ |
