第二周第五天更新

--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -127,7 +127,38 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 
 ## 作业管理
 
+### 饥饿：
+
+由于长期得不到资源导致进程无法推进
+
+### 死循环：
+
+代码逻辑BUG
+
 ### 死锁：
 
-- 两个或两个以上的进程在执行过程中，由于竞争资源或者由于彼此通信二造成的一种阻塞的现象，若无外力作用，它们都将无法推进下去，
+**两个或两个以上的进程**在执行过程中，**由于竞争资源**或者**由于彼此通信**二造成的一种**阻塞**的现象，若无外力作用，它们都将无法推进下去，永远在相互等待的进程称为死锁进程
 
+**死锁的产生：**竞争资源（共享资源数量不满足各进程需求），进程调度顺序不当，当调度顺序为A->B->C->D时会产生死锁，但改为A->D->B->C则不会产生。
+
+img
+
+**`死锁的四个必要条件`**
+
+1. **互斥条件：必须互斥使用资源才会产生死锁**
+2. **请求保持条件：进程至少保持一个资源**，又提出新的资源请求，新资源被占用，**请求被阻塞**，被阻塞的进程不释放自己保持的资源
+3. **不可剥夺条件：**进程获得的资源在未完成使用前不能被剥夺（包括OS），**只能由进程自身释放**
+4. **环路等待条件：**发生死锁时，必然存在进程-资源环形链，环路等待不一定造成死锁，但死锁一定有环路等待
+
+**`死锁的处理策略`**
+
+一.**预防死锁的方法**：破坏四个必要条件的中一个或多个。
+
+1. **破坏互斥条件**：将**临界资源改造成共享资源**（Spooling池化技术）；（可行性不高，很多时候无法破坏互斥条件）
+2. **破坏请求保持条件**：系统规定进程运行之前，**一次性申请所有需要的资源**；（资源利用率低，可能导致别的线程饥饿）
+3. **破坏不可剥夺条件**：当一个进程请求新的资源得不到满足时，必须**释放占有的资源**；（实现复杂，剥夺资源可能导致部分工作失效，反复申请和释放造成额外的系统开销）
+4. **破坏环路等待条件**：可用**资源线性排序**，申请必须按照需要递增申请；（进程实际使用资源顺序和编号顺序不同，会导致资源浪费）
+
+二.**银行家算法**：检查当前资源剩余是否可以满足某个进程的最大需求；如果可以，就把该进程加入安全序列，等待进程允许完成，回收所有资源；重复1，2，直到当前没有线程等待资源；
+
+三.**死锁的检测和解除**：死锁检测算法，资源剥夺法，撤销进程法（终止进程法），进程回退法
