第三周第一天更新

--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -162,3 +162,39 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 二.**银行家算法**：检查当前资源剩余是否可以满足某个进程的最大需求；如果可以，就把该进程加入安全序列，等待进程允许完成，回收所有资源；重复1，2，直到当前没有线程等待资源；
 
 三.**死锁的检测和解除**：死锁检测算法，资源剥夺法，撤销进程法（终止进程法），进程回退法
+
+## 文件管理
+
+### 文件的逻辑结构
+
+- **逻辑结构的文件类型**：有结构文件（文本文件，文档，媒体文件），无结构文件（二进制文件，链接库）
+- **顺序文件**：按顺序放在存储介质中的文件，在逻辑文件当中**存储效率最高**，但不适合存储可变长文件
+- **索引文件**：为解决可变长文件存储而方面，需要配合索引表存储
+
+### 辅存的存储空间分配
+
+- **辅存的分配方式**：连续分配（读取文件容易，速度快），链接分配（隐式链接和显示链接），索引分配
+- **辅存的存储空间管理**：空闲表，空闲链表，位示图。
+
+**目录树**：使得任何文件或目录都有唯一的路径
+
+img
+
+|          |                                                              |
+| -------- | ------------------------------------------------------------ |
+| **目录** | **描述**                                                     |
+| /bin     | 存放二进制可执行文件（ls,cat,mkdir等），常用命令一般都在这里 |
+| /etc     | 存放系统管理和配置文件                                       |
+| /home    | 存放所有用户文件的根目录，是用户主目录的基点，比如用户user的主目录就是/home/user |
+| /usr     | 用于存放系统应用程序，比较重要的目录/usr/local本地管理员软件安装目录 |
+| /opt     | 额外安装的可选应用程序包所放置的位置                         |
+| /proc    | 虚拟文件系统目录，是系统内存的映射。可直接访问这个目录来获取系统信息 |
+| /root    | 超级用户（系统管理员）的主目录                               |
+| /sbin    | 存放二进制可执行文件，只有root才能访问                       |
+| /dev     | 用于存放设备文件                                             |
+| /mnt     | 系统管理员安装临时文件系统的安装点，系统提供这个目录是让用户临时挂载其他的文件系统 |
+| /boot    | 存放用于系统引导时使用的各种文件                             |
+| /lib     | 存放跟文件提供中的程序运行所需要的共享库及内核模块           |
+| /var     | 用于存放运行时需要改变数据的文件                             |
+
+img
