第三周第二天更新

--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -127,6 +127,26 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 
 ## 作业管理
 
+**作业管理值进程调度**
+
+- 定义：指计算机通过决策决定哪个就绪进程就可以**获得CPU使用权**
+
+**进程调度方式：**
+
+**非抢占式调度：**只能由当前运行的进程**主动放弃CPU**；
+
+- 处理器一旦分配给某个进程，就让该进程一直使用下去；
+- 调度程序不以任何原因抢占正在被使用的处理器；
+
+**抢占式调度**：可由**操作系统剥夺当前进程的CPU使用权**。
+
+- 允许调度程序以一定的策略暂停当前运行的进程；
+- 保存好旧进程的上下文信息，分配处理器给新进程；
+
+![img](https://s2.loli.net/2025/04/02/kLBv3ubNJEflcIp.png)
+
+
+
 ### 饥饿：
 
 由于长期得不到资源导致进程无法推进
@@ -202,3 +222,7 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 | /var     | 用于存放运行时需要改变数据的文件                             |
 
 ![ce0b12633a40cfb6c4e0766a855f66a5](https://s2.loli.net/2025/03/31/Wgt795CHlMDrqUG.jpg)
+
+## 设备管理
+
+I/O设备的基本概念：将数据输入输出计算机的外部设备
