第三周第三天更新

--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -127,6 +127,8 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 
 ## 作业管理
 
+### 进程调度
+
 **作业管理值进程调度**
 
 - 定义：指计算机通过决策决定哪个就绪进程就可以**获得CPU使用权**
@@ -145,7 +147,24 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 
 ![img](https://s2.loli.net/2025/04/02/kLBv3ubNJEflcIp.png)
 
+### 进程调度的三大机制
 
+- 就绪队列的排队机制：为了提高进程调度的效率，将就绪进程按照一定的方式排成队列，以便调度程序可以最快找到就绪进程
+
+![image-20210830141937877](https://s2.loli.net/2025/04/02/pCGtrn89S4Q21PN.png)
+
+- **选择运行进程的委派机制：**调度程序以一定的策略，选择就绪进程，将CPU资源分配给它
+
+- **新老进程的上下文切换机制：**保存当前进程的上下文信息，装入被委派执行进程的运行上下文。
+
+  ![image-20210830141949702](https://s2.loli.net/2025/04/02/jfxVhqUO7kZM1H6.png)
+
+**进程调度算法**：
+
+1. **先来先服务算法：**按照在**就绪队列中的先手顺序**执行
+2. **短进程优先调度算法：**优先选择就绪队列中估计**运行时间最短的进程**，不利于长作业进程的执行
+3. **高优先权优先调度算法：**进程附带优先权，**优先选择权重高的进程**，可以使得紧迫的任务优先处理
+4. **时间片轮转调度算法：**按照FIFO的原则排列就绪进程，每次从队列头部去除待执行进程，**分配一个时间片执行**，是相对公平的调度算法，但是不能保证就是响应用户
 
 ### 饥饿：
 
