--- a/source/_posts/大专生速成指南/数据库/数据库速成.md
+++ b/source/_posts/大专生速成指南/数据库/数据库速成.md
@@ -15,3 +15,8 @@ tag:
 
 # E-R
 
+![image-20250414165930340](https://s2.loli.net/2025/04/14/obiYErAvlas5ngy.png)
+
+![image-20250414171431498](https://s2.loli.net/2025/04/14/JgtSTiFnkyYmu6x.png)
+
+![image-20250414171434168](https://s2.loli.net/2025/04/14/n7lybUGscHOvSZF.png)
