--- a/source/_posts/大专生速成指南/操作系统/操作系统题集.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统题集.md
@@ -34,3 +34,29 @@ tag:
 ## 进程管理
 
 ![image-20250416170504577](https://s2.loli.net/2025/04/16/QO1EFbRyAzC9V7U.png)
+
+![image-20250425094829156](https://s2.loli.net/2025/04/25/wGRculWHnh5OQgY.png)
+
+![image-20250425094929618](https://s2.loli.net/2025/04/25/487pEfUsFeJTbjr.png)
+
+![image-20250425095321824](https://s2.loli.net/2025/04/25/RioZxHUplKAjvWX.png)
+
+![image-20250425103211139](https://s2.loli.net/2025/04/25/1O8tcK6fjxl4q2I.png)
+
+![image-20250425103329528](https://s2.loli.net/2025/04/25/I1xEWutlM3y8ihF.png)
+
+![image-20250425103549588](https://s2.loli.net/2025/04/25/YWzOkdA4LtKqpmR.png)
+
+![image-20250425105308816](https://s2.loli.net/2025/04/25/Eo9fmI4ytSkhqpV.png)
+
+![image-20250425105846707](https://s2.loli.net/2025/04/25/8KVNMnPmO2To5QH.png)
+
+![image-20250425112519051](https://s2.loli.net/2025/04/25/3xsT7F5Hp1ZnmQV.png)
+
+![image-20250425112916557](https://s2.loli.net/2025/04/25/hxbMQansH1fdmAr.png)
+
+![image-20250425113029089](https://s2.loli.net/2025/04/25/GtVIXTHPpzb7CWr.png)
+
+![image-20250425113138066](https://s2.loli.net/2025/04/25/5ritEzcVZFnaLeA.png)
+
+![image-20250425113345550](https://s2.loli.net/2025/04/25/C53i7gB9YdcOKoe.png)
