--- a/source/_posts/大专生速成指南/操作系统/操作系统题集.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统题集.md
@@ -60,3 +60,12 @@ tag:
 ![image-20250425113138066](https://s2.loli.net/2025/04/25/5ritEzcVZFnaLeA.png)
 
 ![image-20250425113345550](https://s2.loli.net/2025/04/25/C53i7gB9YdcOKoe.png)
+
+![image-20250427111907930](https://s2.loli.net/2025/04/27/5J9louBS1cvKbxz.png)
+
+![image-20250427112324177](https://s2.loli.net/2025/04/27/k2ACyLge6huH3W1.png)
+
+![image-20250427112341548](https://s2.loli.net/2025/04/27/h2QEonPz9V3OAFd.png)
+
+## 内存管理
+
