--- a/source/_posts/大专生速成指南/操作系统/操作系统题集.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统题集.md
@@ -69,3 +69,10 @@ tag:
 
 ## 内存管理
 
+![image-20250428102437135](https://s2.loli.net/2025/04/28/k62lyxZdtOzDjcU.png)
+
+![image-20250428102648461](https://s2.loli.net/2025/04/28/pRjUsxS3hn19Ylm.png)
+
+![image-20250428102843204](https://s2.loli.net/2025/04/28/pgQ9qZSXjK2Alei.png)
+
+![image-20250428103558065](https://s2.loli.net/2025/04/28/z3ZE6wSf4MpLynk.png)
