--- a/source/_posts/大专生速成指南/操作系统/操作系统.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统.md
@@ -44,7 +44,7 @@ tag:
 
 ### **五状态模型**
 
-- **就绪状态：**其他资源（进程控制块，内存，栈空间，堆空间）都准备好，纸擦和CPU状态
+- **就绪状态：**其他资源（进程控制块，内存，栈空间，堆空间）都准备好，只差CPU状态
 
 - **执行状态：**进程获得CPU，其程序正在执行
 
@@ -96,9 +96,9 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 
    2.**自旋锁**：自旋锁是一种多线程同步的变量，使用自旋锁的线程会反复检查锁变量是否可用，自旋锁不会让出CPU，是一种**忙等待状态**，**即死循环等待锁被释放，自旋锁的效率远高于互斥锁**。特点：**避免了进程或者线程上下文切换的开销**，但是**不适合在单核CPU使用**
 
-​	3.**读写锁：**是一种特殊的自旋锁，允许多个读操作同时访问资源以提高读性能，但是对写操作是互斥的，即**`对多读少写的操作效率提升`**很显著
+​	3.**读写锁：**是一种特殊的自旋锁，允许多个读操作同时访问资源以提高读性能，但是对写操作是互斥的，即`对多读少写的操作效率提升`很显著
 
-​	4**.条件变量**：是一种相对比较复杂的线程同步方法，条件变量允许线程睡眠，直到满足某种条件，**当满足条件时候，可以给先线程信号通知唤醒**
+​	4.**条件变量**：是一种相对比较复杂的线程同步方法，条件变量允许线程睡眠，直到满足某种条件，**当满足条件时候，可以给先线程信号通知唤醒**
 
 ### 线程同步方法对比（重要）
 
@@ -201,6 +201,19 @@ Unix系统提供的域套接字提供了网络套接字类似的功能，如Nfin
 二.**银行家算法**：检查当前资源剩余是否可以满足某个进程的最大需求；如果可以，就把该进程加入安全序列，等待进程允许完成，回收所有资源；重复1，2，直到当前没有线程等待资源；
 
 三.**死锁的检测和解除**：死锁检测算法，资源剥夺法，撤销进程法（终止进程法），进程回退法
+
+## 四种调度算法
+
+- 先来先服务（FCFS）
+- 短作业优先（SJF）
+- 优先级调度算法（PS Priority Scheduling）
+- 时间片轮转调度算法（RR Round Robin）
+
+周转时间 = 完成时间 - 到达时间
+
+带权周转时间 = 周转时间/运行时间
+
+等待时间 = 周转时间 - 运行时间
 
 ## 文件管理
 
