--- a/source/_posts/大专生速成指南/操作系统/操作系统题集.md
+++ b/source/_posts/大专生速成指南/操作系统/操作系统题集.md
@@ -76,3 +76,52 @@ tag:
 ![image-20250428102843204](https://s2.loli.net/2025/04/28/pgQ9qZSXjK2Alei.png)
 
 ![image-20250428103558065](https://s2.loli.net/2025/04/28/z3ZE6wSf4MpLynk.png)
+
+## 雨课堂
+
+![img](https://s2.loli.net/2025/05/07/P5RvEdb8DAuM2LQ.png)
+
+- **时间片轮转算法** ：每个进程依次获得时间片运行，若未完成则重新排队。
+- **最长响应时间** ：最后一个被调度的进程的等待时间最长。
+  最坏情况下，该进程需等待前面所有进程各执行一个时间片。
+  计算公式：(*n*−1)×时间片，其中 *n* 为进程数。
+  代入数据：(10−1)×5ms=45ms。
+
+
+
+![image.png](https://s2.loli.net/2025/05/07/ByipqSVjot8Ka4H.png)
+
+- 银行家算法核心公式 
+
+  Need[*i*,*j*]=Max[*i*,*j*]−Allocation[*i*,*j*]
+
+  其中，Need表示进程还需多少资源才能完成任务。
+
+
+
+![image.png](https://s2.loli.net/2025/05/07/45DErp9V1QzHI8e.png)
+
+- 死锁避免条件 
+
+  确保至少有一个进程能完成，从而释放资源供其他进程使用。
+
+  计算公式：
+
+  最少资源数=*n*×(单进程最大需求−1)+1
+
+  代入数据：
+
+  3×(4−1)+1=10
+
+
+
+![image.png](https://s2.loli.net/2025/05/07/DWm46VpG1Nwrcbz.png)
+
+- 死锁预防 
+
+  通过破坏死锁的四个必要条件之一（互斥、请求保持、不可抢占、循环等待）来避免死锁。
+
+  - **有序资源分配法** ：按序申请资源，破坏“循环等待”条件，属于预防策略。
+  - **银行家算法** ：属于死锁避免策略。
+  - **死锁检测法** ：属于死锁检测与恢复策略。
+  - **资源分配图化简法** ：用于检测死锁是否存在。
