图片最终测试

--- a/source/_posts/图片测试.md
+++ b/source/_posts/图片测试.md
@@ -3,6 +3,8 @@ title: 图片测试
 date: 2025-05-07 17:14:46
 tags:
 ---
-![1](img/1.png)
+![1](../img/1.png)
+
+![image-20250507180623114](../img/image-20250507180623114.png)
 
 ![2](图片测试/1.png)
