--- a/source/_posts/图片测试.md
+++ b/source/_posts/图片测试.md
@@ -3,8 +3,8 @@ title: 图片测试
 date: 2025-05-07 17:14:46
 tags:
 ---
-![1](../img/1.png)
+![lqx](../img/ad616906d5b0415e941b08dd04bb3bbd.jpg)
 
-![image-20250507180623114](../img/image-20250507180623114.png)
+![laoba2](../img/e41b653fda104eb9be71fcf963cbb43b.jpg)
 
-![2](图片测试/1.png)
+![lbl1](../img/c8bf3ffee3d041ca8e93ede0491e081c.jpg)
